--- a/app/views/reports/_filters.html.erb
+++ b/app/views/reports/_filters.html.erb
@@ -2,7 +2,7 @@
   <%= form_with url: reports_path, method: :get, local: true do %>
     <div class="mb-4">
       <%= label_tag :category_id, "Categoria", class: "block text-gray-700 font-bold mb-2" %>
-      <%= select_tag :category_id, options_from_collection_for_select(Category.all, :id, :category, params[:category_id]), include_blank: true, class: "block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" %>
+      <%= select_tag :category_id, options_from_collection_for_select(Category.all, :id, :name, params[:category_id]), include_blank: true, class: "block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
     <div class="mb-4">
       <%= label_tag :address_id, "Endereço", class: "block text-gray-700 font-bold mb-2" %>
