--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
             <% if current_user.image.attached? %>
               <%= image_tag(current_user.image, class: "rounded-full w-12 h-12") %>
             <% end %>
+            <% if current_user.admin? %>
+              <%= button_to "Administrar", admin_users_path, method: :get, data: { turbo_method: :get }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %>
+            <% end %>
             <%= button_to "Perfil", edit_user_registration_path, method: :get, data: { turbo_method: :get }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ml-3" %>
             <%= button_to "Sair", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
           <% else %>
