--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -26,7 +26,7 @@
 
       <div class="mb-4">
         <%= form.label :category_id, "Categoria", class: "block text-gray-700 font-bold mb-2" %>
-        <%= form.collection_select :category_id, Category.all, :id, :category, {}, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+        <%= form.collection_select :category_id, Category.all, :id, :name, {}, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
       </div>
 
       <div class="mb-4">
