--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -21,7 +21,7 @@
             </div>
             <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= truncate(report.description, length: 25) %></p>
             <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= truncate(report.category.name, length: 25) %></p>
-            <p class="text-gray-700"><strong>Localização:</strong> <%= truncate(report.address.neighbhood, length: 25) %></p>
+            <p class="text-gray-700"><strong>Localização:</strong> <%= truncate(report.address.street, length: 25) %></p>
             <p class="text-gray-700"><strong>Status:</strong> <%= I18n.t("report_status.#{report.status}") %></p>
           </div>
           
