--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,7 +13,7 @@
         <% @users.each do |user| %>
           <tr class="hover:bg-gray-100">
             <td class="py-2 px-4 border-b border-gray-200"><%= user.email %></td>
-            <td class="py-2 px-4 border-b border-gray-200"><%= user.role %></td>
+            <td class="py-2 px-4 border-b border-gray-200"><%= user.role&.name %></td>
             <td class="py-2 px-4 border-b border-gray-200">
               <%= link_to "Editar", edit_admin_user_path(user), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
             </td>
