--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -7,7 +7,7 @@
   <%= form.collection_select :role_id, User::Role.all, :id, :name, {}, class: "block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" %>
       </div>
         <div class="flex items-center justify-between">
-         <%= form.submit "Save", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
+         <%= form.submit "Salvar", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
           <%= link_to "Back", admin_users_path, class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-full" %>
         </div>
       </div>
