--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -5,48 +5,8 @@
     <div class="lg:w-1/4">
       <%= render "filters" %>
     </div>
-    <div class="lg:w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <% @reports.each do |report| %>
-        <div class="bg-white shadow-md rounded-lg p-6 w-full h-96 flex flex-col justify-between">
-          <div>
-            <div class="flex items-center mb-2">
-              <div class="w-12 h-12 flex-shrink-0">
-                <% if report.user.image.attached? %>
-                  <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
-                <% else %>
-                  <div class="rounded-full w-12 h-12 bg-gray-200"></div>
-                <% end %>
-              </div>
-              <h2 class="text-xl font-semibold mb-2 ml-3"><%= truncate(report.title, length: 25) %></h2>
-            </div>
-            <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= truncate(report.description, length: 25) %></p>
-            <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= truncate(I18n.t("category_name.#{report.category.name}"), length: 25) %></p>
-            <p class="text-gray-700"><strong>Localização:</strong> <%= truncate(report.address.street, length: 25) %></p>
-            <p class="text-gray-700"><strong>Status:</strong> <%= I18n.t("report_status.#{report.status}") %></p>
-          </div>
-          
-          <% if report.images.attached? %>
-            <div class="flex space-x-4 mt-4">
-              <% report.images.first(3).each do |image| %>
-                <%= image_tag image.variant(resize_to_limit: [150, 150]), class: "w-24 h-24 object-cover rounded" %>
-              <% end %>
-            </div>
-          <% else %>
-            <div class="flex space-x-4 mt-4 h-24">
-              <div class="w-24 h-24 bg-gray-200 rounded"></div>
-              <div class="w-24 h-24 bg-gray-200 rounded"></div>
-              <div class="w-24 h-24 bg-gray-200 rounded"></div>
-            </div>
-          <% end %>
-
-          <div class="flex items-center justify-between mt-4">
-            <p><%= link_to "Ver Mais", report_path(report), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %></p>
-            <% if report.user == current_user %>
-              <%= link_to "Editar", edit_report_path(report), class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline ml-4" %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
+    <div class="lg:w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" id="reports-list">
+      <%= render partial: 'reports/reports_list', locals: { reports: @reports } %>
     </div>
   </div>
 </div>
